--- a/css/style.css
+++ b/css/style.css
@@ -111,13 +111,16 @@ input[type="radio"].visually-hidden {
   font-weight: bold;
 }
 
-a.site-navigation-active {
-  color: #766357;
-}
-
 .main-navigation a:hover,
 .main-navigation a:focus {
   color: #81b3d2;
+}
+
+a.site-navigation-active,
+a.site-navigation-active:hover,
+a.site-navigation-active:focus,
+a.site-navigation-active:active {
+  color: #766357;
 }
 
 .main-header {
@@ -202,10 +205,7 @@ a.site-navigation-active {
   background-color: #ffffff;
 }
 
-.reasons-reason-number::before {
-  background-color: #333333;
-}
-
+.reasons-reason-number::before,
 .reasons-reason-number::after {
   background-color: #333333;
 }
@@ -218,15 +218,18 @@ a.site-navigation-active {
 .reason-item-img {
   width: 800px;
   overflow: hidden;
+  /* проверить hidden */
 }
 
 .reason-item-img img {
   display: block;
   height: 256px;
+  /* проверить */
 }
 
 .reason-item-reverse {
   flex-direction: row-reverse;
+  /* check */
 }
 
 .recommendations-list {
@@ -365,8 +368,10 @@ a.site-navigation-active {
 
 .form-wrapper {
   display: block;
+  /* check */
   position: absolute;
   z-index: 2;
+  /* check */
   background-color: #ffffff;
   width: 568px;
   padding-top: 55px;
@@ -543,6 +548,13 @@ input.finder-btn:active {
   background-color: rgba(254, 254, 254, 0.9);
   display: flex;
   min-height: 120px;
+  align-items: center;
+}
+.footer:after {
+
+  content: '';
+  min-height: inherit;
+  font-size:0;
 }
 
 .footer-main {
@@ -760,9 +772,9 @@ input.finder-btn:active {
 
 .filter-search-price-controls label {
   display: inline-block;
+  vertical-align: bottom;
   font-size: 14px;
   line-height: 21px;
-  vertical-align: bottom;
   cursor: pointer;
 }
 
@@ -873,6 +885,7 @@ input.finder-btn:active {
 
 .sorting-list-btn button {
   display: inline-block;
+  vertical-align: middle;
   background-color: #ffffff;
 }
 
@@ -1079,7 +1092,7 @@ a.sorting-list-active:active {
 .hotel-rating-img {
   background-image: url("../img/star.svg");
   background-repeat: space;
-  background-position: bottom center;
+  background-position: left center;
   height: 21px;
   margin: 0;
 }
